Fixed Overflow

--- a/Css/Zindua.css
+++ b/Css/Zindua.css
@@ -1,3 +1,6 @@
+body{
+  overflow-x: hidden;
+}
 nav {
   position: sticky;
   top: 0;
